# lex

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  build.sh  pyproject.toml
docs/: tui-workflow.md
src/lex/: __init__.py  cli.py  coordination.py  dashboard.py  db.py  dispatch.py  installer.py  merge_workflow.py  rich_output.py  role_contracts.py  tui.py  worker_runtime.py
src/rex/: __init__.py  cli.py  dashboard.py  db.py  installer.py  merge_workflow.py  rich_output.py  tui.py
tests/: test_cli.py  test_coordination_cli.py  test_coordination_model_cli.py  test_dashboard_state.py  test_dispatch_rolecontracts_cli.py  test_git_awareness.py  test_provenance.py  test_role_contracts_cli.py  test_roster_preflight.py  test_session_fingerprints.py  test_worker_dispatch_cli.py
