[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rex"
version = "0.1.0"
description = "Repo-local operating layer for multi-agent coding workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13",
    "textual>=0.80",
]

[project.scripts]
rex = "rex.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
